--- a/package.json
+++ b/package.json
@@ -54,21 +54,17 @@
     "vue-router": "4.4.2"
   },
   "devDependencies": {
+    "@eslint/js": "9.8.0",
     "@prettier/plugin-pug": "3.0.0",
     "@prettier/plugin-xml": "3.4.1",
     "@tikui/core": "6.1.0",
     "@types/sinon": "17.0.3",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
     "@vitejs/plugin-vue": "5.1.2",
     "@vitest/coverage-istanbul": "2.0.5",
-    "@vue/eslint-config-prettier": "9.0.0",
-    "@vue/eslint-config-typescript": "13.0.0",
     "@vue/test-utils": "2.4.6",
     "cypress": "13.13.2",
-    "eslint": "8.57.0",
+    "eslint": "9.8.0",
     "eslint-plugin-cypress": "3.4.0",
-    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-pug": "1.2.5",
     "eslint-plugin-vue": "9.27.0",
     "fontello-cli": "0.6.2",
@@ -91,6 +87,7 @@
     "stylelint-config-standard-scss": "13.1.0",
     "tikuidoc-tikui": "6.0.0",
     "typescript": "5.5.4",
+    "typescript-eslint": "8.0.1",
     "vite": "5.3.5",
     "vitest": "2.0.5",
     "vitest-sonar-reporter": "2.0.0",
